# forge

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN.md  LICENSE  PUBLISHING.md  README.md  config.yaml  forge.db  forge.yaml  prd.md  pyproject.toml  requirements.txt  run_forge.bat  run_litellm.bat  test_forge.py
docs/: DecisionLog.md  IA.md  Personas.md  Plan.md  Process.md  ProjectContext.md  PromptLog.md  Research.md  ReviewChecklist.md  Roadmap.md  ShadowEvaluation.md  UserScenarios.md  WorkLog.md
forge_gateway/: __init__.py  cli.py  server.py  settings.py
forge_gateway/api/: admin.py  anthropic.py  deps.py  observe.py  openai.py
forge_gateway/core/: analyzer.py  health.py  metrics.py  pricing.py  prom.py  registry.py  scheduler.py  throttle.py  tuner.py
forge_gateway/providers/: base.py  litellm_provider.py
forge_gateway/static/: dashboard.html
forge_gateway/storage/: base.py  sqlite_repo.py
src/: analyzer.py  cli.py  config.py  health_monitor.py  metrics.py  scheduler.py  server.py  settings.py
src/api/: admin.py  anthropic_convert.py  auth.py  observe.py  openai.py
src/core/: policy.py  pricing.py  (+3 more)
tests/: simulator.py  test_analyzer.py  test_anthropic_convert.py  test_banner.py  test_cli.py  test_metrics_engine.py  test_model_health.py  test_multikey.py  test_openai_integration.py  test_policy.py  test_pricing.py  test_prom.py  test_registry.py  test_reload_state.py  test_scheduler.py  test_scheduler_golden.py  test_server_security.py  test_settings.py  test_simulator_scenarios.py  test_sqlite_repo.py  test_throttle.py  test_tuner.py
(+2 files in other folders)
