[project]
name = "forge-gateway"
version = "0.3.0.dev0"
description = "Intelligent AI Gateway for Coding Agents — task-aware routing, policy engine, transparent failover"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "WhiteJbb" }]
keywords = ["llm", "gateway", "router", "openai", "anthropic", "coding-agents", "litellm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "litellm>=1.50.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/WhiteJbb/forge"
Repository = "https://github.com/WhiteJbb/forge"

[project.scripts]
forge = "forge_gateway.cli:main"
forge-gw = "forge_gateway.cli:main"  # Foundry(Ethereum)의 forge와 PATH 충돌 시 대안 (§8.1)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["forge_gateway"]
